--- a/EN.html
+++ b/EN.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Haozhe Li - My Personal Website</title>  
+    <title>Haozhe Li - Student | Developer | Video Blogger | Musician</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
@@ -339,6 +339,7 @@
                     <p class="footer-links">
                         <a href="#">Links: </a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
+                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
