--- a/JA.html
+++ b/JA.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>イ・ホチョル氏の個人ホームページ</title>  
-    <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
+    <title>イ・ホチョル - 学生 ｜ 開発者 ｜ 映像作家 ｜ 音楽家</title>  
+    <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science, イ・ホチョル'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
 
@@ -335,9 +335,10 @@
                     <p class="footer-links">
                         <a href="#">リンク：</a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
+                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
-                        <a href="https://www.instagram.com/haozheli04/">インスタグラム</a>
-                        <a href="https://v.douyin.com/rtTTNA8/">トレモロ音</a>
+                        <a href="https://www.instagram.com/haozheli04/">Instagram</a>
+                        <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <select onchange="window.location=this.value;">
                             <option value="">言語を選択してください</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
@@ -348,7 +349,7 @@
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other (Google Translate)</option>
                         </select>
                     </p>
-                    <p class="footer-company-name">著作権所有Copyright 2022<a href="#">李浩哲</a> <br>から<a href="https://github.io/">GitHub Pages</a> と <a href="https://www.haozheli.com/">私の奇妙な脳</a>強力なサポートを提供</p>
+                    <p class="footer-company-name">著作権所有Copyright 2022<a href="#">イ・ホチョル</a> <br>から<a href="https://github.io/">GitHub Pages</a> と <a href="https://www.haozheli.com/">私の奇妙な脳</a>強力なサポートを提供</p>
                 </div>
             </div>
         </div><!-- end container -->
@@ -370,7 +371,7 @@
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
-    <script> alert("You were redirected to my website in Japanese (this may have been automatic, or you may have changed it manually). This page is translated using Google. Although I spent a lot of time proofreading, there will always be some parts that are strange to read. I do apologize for it. If you mind it very much, please read my website in English or Chinese. To change your language in this site, please visit the bottom of this page at the footer.") </script>
+    <script> alert("The Japanese on this site is translated by Google, so some of the content may not be accurate") </script>
 
 </body>
 </html>
