--- a/KO.html
+++ b/KO.html
@@ -334,10 +334,11 @@
                 <div class="footer-left">
                     <p class="footer-links">
                         <a href="#">링크</a>
-                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">삐그덕삐그덕</a>
-                        <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">유튜브</a>
-                        <a href="https://www.instagram.com/haozheli04/">인스타그램</a>
-                        <a href="https://v.douyin.com/rtTTNA8/">틱톡</a>
+                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
+                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
+                        <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
+                        <a href="https://www.instagram.com/haozheli04/">Instagram</a>
+                        <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <select onchange="window.location=this.value;">
                             <option value="">언어를 선택하세요</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
@@ -370,7 +371,7 @@
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
-    <script> alert("You were redirected to my website in Korean (this may have been automatic, or you may have changed it manually). This page is translated using Google. Although I spent a lot of time proofreading, there will always be some parts that are strange to read. I do apologize for it. If you mind it very much, please read my website in English or Chinese. To change your language in this site, please visit the bottom of this page at the footer.") </script>
+    <script> alert("The Korean on this site is translated by Google, so some of the content may not be accurate") </script>
 
 </body>
 </html>
