--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Haozhe Li - My Personal Website</title>  
+    <title>Haozhe Li - Student | Developer | Video Blogger | Musician</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
@@ -339,6 +339,7 @@
                     <p class="footer-links">
                         <a href="#">Links: </a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
+                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
@@ -356,7 +357,7 @@
 					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a></p>
                 </div>
             </div>
-        </div><!-- end container --
+        </div><!-- end container -->
     </div><!-- end copyrights -->
 
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
@@ -374,8 +375,6 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
-
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     <script type="text/javascript">
 
         var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
@@ -393,5 +392,7 @@
             window.location = 'EN.html'
         }
     </script>
+
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 </html>
