--- a/CN.html
+++ b/CN.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>李浩哲的个人网站</title>  
+    <title>李浩哲 - 学生 ｜开发者 ｜ 视频创作者 ｜ 音乐家</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
@@ -334,6 +334,7 @@
                     <p class="footer-links">
                         <a href="#">链接：</a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">哔哩哔哩</a>
+                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">领英</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
