--- a/blogs_JA/coursera.html
+++ b/blogs_JA/coursera.html
@@ -478,6 +478,14 @@
                     <a href="https://coursera.org/share/af43fc0a0b9fd68cf0698dba7b6ef482">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">Pythonを使ってオペレーティングシステムと対話する</button>
                     </a>
+
+                    <p><br></p>
+
+                    <a href="https://www.haozheli.com/uploads/Haozhe Li_aiForEveryoneCertificate.pdf">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            AI For Everyone
+                        </button>
+                    </a>
                     
                     <p><br></p>
 
