--- a/blogs_CN/coursera.html
+++ b/blogs_CN/coursera.html
@@ -489,6 +489,14 @@
 
                     <p><br></p>
 
+                    <a href="https://www.haozheli.com/uploads/Haozhe Li_aiForEveryoneCertificate.pdf">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            人人AI
+                        </button>
+                    </a>
+
+                    <p><br></p>
+
                     <a href="https://www.coursera.org/learn/machine-learning">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             监督机器学习：回归与分类（正在学习中）
