--- a/CN.html
+++ b/CN.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="cn">
+<html lang="zh">
 
     <!-- Basic -->
     <meta charset="utf-8">
@@ -344,6 +344,9 @@
                             <option value="EN.html">English</option>
                             <option value="CN.html">中文</option>
                             <option value="JA.html">日本</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 ((Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français ((Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch ((Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other (Google Translate)</option>
                         </select>
                     </p>
