--- a/blogs/visualEffects.html
+++ b/blogs/visualEffects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 <title>Visual Effects in 90 Seconds</title>
 <link rel="shortcut icon" href="favicon.ico">
