--- a/blogs/MP_CS124.html
+++ b/blogs/MP_CS124.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 <title>Machine Project CS124</title>
 <link rel="shortcut icon" href="favicon.ico">
