--- a/blogs/UW_night.html
+++ b/blogs/UW_night.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 <title>Night View in UW</title>
 <link rel="shortcut icon" href="favicon.ico">
