--- a/blogs/slomotion.html
+++ b/blogs/slomotion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 <title>Super Slomotion</title>
 <link rel="shortcut icon" href="favicon.ico">
