--- a/blogs/znotes.html
+++ b/blogs/znotes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 <title>Znotes Contribution</title>
 <link rel="shortcut icon" href="favicon.ico">
