--- a/blogs_JA/MP_CS124.html
+++ b/blogs_JA/MP_CS124.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
 <title>マシンプロジェクト CS124</title>
 <link rel="shortcut icon" href="favicon.ico">
