--- a/blogs_JA/iphone14.html
+++ b/blogs_JA/iphone14.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
 <title>ドルビービジョンのiPhone 14 Pro</title>
 <link rel="shortcut icon" href="favicon.ico">
