--- a/blogs_JA/znotes.html
+++ b/blogs_JA/znotes.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
 <title>Znotesコントリビューション</title>
 <link rel="shortcut icon" href="favicon.ico">
