--- a/blogs_JA/coursera.html
+++ b/blogs_JA/coursera.html
@@ -503,6 +503,27 @@
 </div>
             </div>
         </div>
-        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+        <script>
+            function addDarkmodeWidget() {
+              const options = {
+                  bottom: '64px', // default: '32px'
+                  right: 'unset', // default: '32px'
+                  left: '32px', // default: 'unset'
+                  time: '0.5s', // default: '0.3s'
+                  mixColor: '#fff', // default: '#fff'
+                  backgroundColor: '#fff',  // default: '#fff'
+                  buttonColorDark: '#100f2c',  // default: '#100f2c'
+                  buttonColorLight: '#fff', // default: '#fff'
+                  saveInCookies: false, // default: true,
+                  label: '🌓', // default: ''
+                  autoMatchOsTheme: true // default: true
+                }
+              const darkmode = new Darkmode(options);
+              darkmode.showWidget();
+            }
+            window.addEventListener('load', addDarkmodeWidget);
+        </script>
     </body>
 </html>
