--- a/blogs_CN/vlog.html
+++ b/blogs_CN/vlog.html
@@ -526,8 +526,9 @@
                   label: '🌓', // default: ''
                   autoMatchOsTheme: true // default: true
                 }
-              const darkmode = new Darkmode(options);
-              darkmode.showWidget();
+              const darkmode =  new Darkmode();
+darkmode.toggle();
+console.log(darkmode.isActivated()) // will return true
             }
             window.addEventListener('load', addDarkmodeWidget);
         </script>
