--- a/blogs_JA/qingdaoSummer.html
+++ b/blogs_JA/qingdaoSummer.html
@@ -488,21 +488,20 @@
         <script>
             function addDarkmodeWidget() {
               const options = {
-                  bottom: '64px', // default: '32px'
+                  bottom: 'unset', // default: '32px'
                   right: 'unset', // default: '32px'
-                  left: '32px', // default: 'unset'
+                  left: '50px', // default: 'unset'
                   time: '0.5s', // default: '0.3s'
                   mixColor: '#fff', // default: '#fff'
                   backgroundColor: '#fff',  // default: '#fff'
                   buttonColorDark: '#100f2c',  // default: '#100f2c'
                   buttonColorLight: '#fff', // default: '#fff'
-                  saveInCookies: false, // default: true,
+                  saveInCookies: true, // default: true,
                   label: '🌓', // default: ''
                   autoMatchOsTheme: true // default: true
                 }
-              const darkmode =  new Darkmode();
-darkmode.toggle();
-console.log(darkmode.isActivated()) // will return true
+              const darkmode = new Darkmode(options);
+              darkmode.showWidget();
             }
             window.addEventListener('load', addDarkmodeWidget);
         </script>
