--- a/CN.html
+++ b/CN.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>李浩哲 - 学生 ｜开发者 ｜ 视频创作者 ｜ 音乐家</title>  
+    <title>李浩哲 - 学生 ｜开发者 ｜ 艺术家</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
