--- a/JA.html
+++ b/JA.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>イ・ホチョル - 学生 ｜ 開発者 ｜ 映像作家 ｜ 音楽家</title>  
+    <title>イ・ホチョル - 学生 ｜ 開発者 ｜ アーティスト</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science, イ・ホチョル'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
