--- a/404_CN.html
+++ b/404_CN.html
@@ -463,11 +463,11 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Whops! It seems that you have come to a place where I have not yet ventured                  </p>
+                        貌似你到了我从未踏足过的地方了呢                  </p>
 
                     <a href="https://www.haozheli.com">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            BACK TO HOME
+                            回到主页
                         </button>
                     </a>
                 </div>
@@ -499,16 +499,6 @@
               darkmode.showWidget();
             }
             window.addEventListener('load', addDarkmodeWidget);
-        </script>
-        <script type="text/javascript">
-
-            var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
-            localStorage.setItem('locale', language)
-            if (language.indexOf("zh-") !== -1) {
-                window.location = '404_CN.html'
-            } else if (language.indexOf('ja') !== -1) {
-                window.location = '404_JA.html'   
-            }
         </script>    
     </body>
 </html>
