--- a/CN.html
+++ b/CN.html
@@ -339,10 +339,10 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                         <select onchange="window.location=this.value;">
-                            <option value="">请选择您的语言</option>
+                            <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English</option>
-                            <option value="CN.html">中文</option>
+                            <option value="CN.html" selected>中文</option>
                             <option value="JA.html">日本</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 ((Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français ((Google Translate)</option>
