--- a/CN.html
+++ b/CN.html
@@ -151,7 +151,7 @@
 						<div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>教育（1/4）</h3>
-                                <p class="lead">伊利诺伊大学厄巴纳-香槟分校<br>计算机科学+音乐学士2022-2026<br>目前平均绩点：4.0<br><br></p>
+                                <p class="lead">伊利诺伊大学厄巴纳-香槟分校<br>计算机科学+音乐理学士2022-2026<br>目前平均绩点：4.0<br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href="blogs_CN/education.html"><b>查看更多</b></a>
@@ -342,7 +342,7 @@
                             <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English</option>
-                            <option value="CN.html" selected>中文</option>
+                            <option value="CN.html">中文</option>
                             <option value="JA.html">日本</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 ((Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français ((Google Translate)</option>
