--- a/EN.html
+++ b/EN.html
@@ -346,7 +346,7 @@
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
-                            <option value="EN.html" selected>English</option>
+                            <option value="EN.html">English</option>
                             <option value="CN.html">中文</option>
                             <option value="JA.html">日本</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 ((Google Translate)</option>
