--- a/CN.html
+++ b/CN.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>简历</h3>
-                <p align="center">查看我的<a href="uploads/Haozhe Li_Resume.pdf">正式简历</a></p>
+                <p align="center">您可以在<a href="https://www.linkedin.com/in/haozhe-li-306742252/">领英</a>查看我的更多信息，或者下载我的<a href="uploads/Haozhe Li_Resume.pdf">正式简历</a></p>
             </div><!-- end title -->
 
             <div class="row">
@@ -203,7 +203,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>作品集</h3>
-                <p>快速查看一下我的作品集</p>
+                <p>以下是我在近两年中参与的项目以及作品等</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
@@ -334,7 +334,7 @@
                     <p class="footer-links">
                         <a href="#">链接：</a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">哔哩哔哩</a>
-                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">领英</a>
+                        <a href="https://www.linkedin.com/in/haozhe-li-306742252/">领英</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
