--- a/EN.html
+++ b/EN.html
@@ -143,7 +143,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>RESUME</h3>
-                <p align="center">View my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
+                <p align="center">You can directly visit my <a href="https://www.linkedin.com/in/haozhe-li-306742252/">Linkedin</a> for more information, or download my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
             </div><!-- end title -->
 
             <div class="row">
@@ -339,7 +339,7 @@
                     <p class="footer-links">
                         <a href="#">Links: </a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
-                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/haozhe-li-306742252/">LinkedIn</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
