--- a/JA.html
+++ b/JA.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>履歴書</h3>
-                <p align="center">自分のを表示<a href="uploads/Haozhe Li_Resume.pdf">公式履歴書</a></p>
+                <p align="center">詳細については、私の<a href="https://www.linkedin.com/in/haozhe-li-306742252/">Linkedin</a>をご覧いただくか、<a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a>をダウンロードしてください。</p>
             </div><!-- end title -->
 
             <div class="row">
@@ -335,7 +335,7 @@
                     <p class="footer-links">
                         <a href="#">リンク：</a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
-                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/haozhe-li-306742252/">LinkedIn</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
