--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <p class="footer-links">
                         <a href="#">Links: </a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
-                        <a href="https://www.linkedin.com/in/浩哲-李-306742252/">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/haozhe-li-306742252/">LinkedIn</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
