--- a/CN.html
+++ b/CN.html
@@ -341,13 +341,13 @@
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
-                            <option value="EN.html">English</option>
-                            <option value="CN.html">中文</option>
-                            <option value="JA.html">日本</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 ((Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français ((Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch ((Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other (Google Translate)</option>
+                            <option value="EN.html">English🇺🇸</option>
+                            <option value="CN.html">中文🇨🇳</option>
+                            <option value="JA.html">日本🇯🇵</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인🇰🇷 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français🇫🇷 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch🇩🇪 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other🌍 (Google Translate)</option>
                         </select>
                     </p>
                     <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持</p>
