--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <select onchange="window.location=this.value;">
-                            <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language</option>
+                            <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
-                            <option value="EN.html">English🇺🇸</option>
-                            <option value="CN.html">中文🇨🇳</option>
-                            <option value="JA.html">日本🇯🇵</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인🇰🇷 (Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français🇫🇷 (Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch🇩🇪 (Google Translate)</option>
+                            <option value="EN.html">English (US) 🇺🇸</option>
+                            <option value="CN.html">简体中文 🇨🇳</option>
+                            <option value="JA.html">日本 🇯🇵 </option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 🇰🇷 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français 🇫🇷 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch 🇩🇪 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other🌍 (Google Translate)</option>
                         </select>
                     </p>
