--- a/CN.html
+++ b/CN.html
@@ -340,7 +340,7 @@
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
-                            <option value="index.html">Auto (Mirror Your Device)</option>
+                            <option value="index.html">自动（映射你的设备）</option>
                             <option value="EN.html">English🇺🇸</option>
                             <option value="CN.html">中文🇨🇳</option>
                             <option value="JA.html">日本🇯🇵</option>
