--- a/JA.html
+++ b/JA.html
@@ -341,7 +341,7 @@
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>言語を選択してください</option>
-                            <option value="index.html">Auto (Mirror Your Device)</option>
+                            <option value="index.html">自動（デバイスのマッピング）</option>
                             <option value="EN.html">English🇺🇸</option>
                             <option value="CN.html">中文🇨🇳</option>
                             <option value="JA.html">日本🇯🇵</option>
