--- a/EN.html
+++ b/EN.html
@@ -143,7 +143,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>RESUME</h3>
-                <p align="center">View my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
+                <p align="center">Please visit my <a href="https://www.linkedin.com/in/haozhe-li-306742252/">LinkedIn</a> or view my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
             </div><!-- end title -->
 
             <div class="row">
