--- a/CN.html
+++ b/CN.html
@@ -174,7 +174,7 @@
                         <div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>经历(3/4)</h3>
-                                <p class="lead">ZNotes内容贡献<br><br><br><br></p>
+                                <p class="lead">ZNotes内容贡献<br>CS 124课程助理<br><br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href="blogs_CN/experience.html"><b>查看更多</b></a>
