--- a/JA.html
+++ b/JA.html
@@ -175,7 +175,7 @@
                         <div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>経験(3/4)</h3>
-                                <p class="lead">ZNotesコンテンツ投稿<br><br><br><br></p>
+                                <p class="lead">ZNotesコンテンツ投稿<br>CS 124コースアシスタント<br><br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href="blogs_JA/experience.html"><b>詳細はこちら</b></a>
