--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                                 <h3><i class="fa fa-quote-left"></i> Education (1/4)</h3>
                                 <p class="lead">University of Illinois Urbana-Champaign
                                 <br>BS in Computer Science + Music 2022 - 2026
-                                <br>Current GPA: 4.0
-                                <br><br></p>
+                                <br>Current GPA: 4.0<br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href="blogs/education.html"><b>VIEW MORE</b></a>
@@ -179,7 +178,7 @@
                         <div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>Experience (3/4)</h3>
-                                <p class="lead">ZNotes Content Contribution<br><br><br><br></p>
+                                <p class="lead">ZNotes Content Contribution<br>CS 124 Course Assistant<br><br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href="blogs/experience.html"><b>VIEW MORE</b></a>
@@ -377,6 +376,8 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
+
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     <script type="text/javascript">
 
         var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
@@ -387,7 +388,5 @@
             window.location = 'JA.html'   
         }
     </script>
-
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 </html>
