--- a/blogs/cs124CA.html
+++ b/blogs/cs124CA.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
     <head>
-<title>经历</title>
+<title>CS 124 Course Assistant</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,22 +458,16 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        经历                  </div>
+                        CS 124课程助理                  </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        请查看我的经历                 </p>
+                        After completing CS 124 with honors, I became a Course Assistant for CS 124 in Spring 2023. In my spare time, I will be recording code ideas and answering students' questions in the Help Site to do my best to help the students who take this course 💪                 </p>
 
-                    <a href="znotes.html">
+                    <a href="https://www.cs124.org/profile/hl83">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            ZNotes内容贡献
-                        </button>
-                    </a>
-
-                    <a href="cs124CA.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            CS 124课程助理
+                        View more in CS 124 Website
                         </button>
                     </a>
 
@@ -481,7 +475,7 @@
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/experience.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/cs124CA.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
