--- a/blogs_JA/experience.html
+++ b/blogs_JA/experience.html
@@ -467,6 +467,12 @@
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ZNotes コンテンツコントリビューション</button>
                     </a>
 
+                    <a href="cs124CA.html">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            CS 124コースアシスタント
+                        </button>
+                    </a>
+
                 </div>
             </div>
 
