--- a/CN.html
+++ b/CN.html
@@ -338,6 +338,7 @@
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
+                        <a href="blogs_CN/buyMeACoffee.html">请我喝杯咖啡🌹</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
                             <option value="index.html">自动（映射你的设备）</option>
