--- a/EN.html
+++ b/EN.html
@@ -342,6 +342,7 @@
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
+                        <a href="blogs/buyMeACoffee.html">Buy Me A Coffee🌹</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
