--- a/JA.html
+++ b/JA.html
@@ -339,6 +339,7 @@
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
+                        <a href="blogs_JA/buyMeACoffee.html">コーヒーを買ってきて🌹</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>言語を選択してください</option>
                             <option value="index.html">自動（デバイスのマッピング）</option>
