--- a/EN.html
+++ b/EN.html
@@ -363,6 +363,7 @@
     </div><!-- end copyrights -->
 
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
+    
 
     <!-- ALL JS FILES -->
     <script src="js/all.js"></script>
@@ -379,5 +380,14 @@
     <script src="js/jquery.vide.js"></script>
 
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+
+    <!--black and white-->
+    <script>
+        var result = confirm("On the afternoon of January 29, 2022, my grandmother passed away due to illness. In memory of my grandma, this site will be black and white for the next seven days. You can also visit my grandmother's memorial page by clicking OK");
+        if (result == true) {
+          window.location = "https://www.haozheli.com/blogs/cuilanliu.html";
+        }
+    </script>
+    <!--black and white-->
 </body>
 </html>
