--- a/JA.html
+++ b/JA.html
@@ -374,6 +374,14 @@
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
+        <!--black and white-->
+        <script>
+            var result = confirm("2022年1月29日の午後、祖母が長い闘病生活の末に亡くなりました。 おばあちゃんを偲んで、これから7日間、このサイトはモノクロになります。 OKをクリックすると、祖母のメモリアルページもご覧いただけます。");
+            if (result == true) {
+              window.location = "https://www.haozheli.com/blogs/cuilanliu.html";
+            }
+        </script>
+        <!--black and white-->
 
 </body>
 </html>
