--- a/CN.html
+++ b/CN.html
@@ -374,5 +374,14 @@
     <script src="js/jquery.vide.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 
+    <!--black and white-->
+    <script>
+        var result = confirm("在2022年1月29日的下午，我的姥姥因病离开了人世。以缅怀我的姥姥，该网站将在未来的七天内变为黑白。您也可以点击确定访问我姥姥的纪念页面");
+        if (result == true) {
+          window.location = "https://www.haozheli.com/blogs/cuilanliu.html";
+        }
+    </script>
+    <!--black and white-->
+
 </body>
 </html>
